--- a/package.json
+++ b/package.json
@@ -1,16 +1,20 @@
 {
-  "name": "passwd_ws",
+  "name": "passwd-ws",
   "version": "1.0.0",
   "description": "Passwd as a Service",
-  "main": "index.js",
+  "main": "server.js",
   "dependencies": {
-    "express": "^4.16.3"
+    "async": "^2.6.0",
+    "body-parser": "^1.18.2",
+    "express": "^4.16.3",
+    "winston": "^2.4.2"
   },
   "devDependencies": {
     "mocha": "^5.1.1"
   },
   "scripts": {
-    "test": "mocha"
+    "test": "mocha",
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
