--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,12 +4,25 @@
   // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
   "version": "0.2.0",
   "configurations": [
-
     {
       "type": "node",
       "request": "launch",
       "name": "Passwd default",
       "program": "${workspaceFolder}/main/server.js"
+    },
+    {
+      "type": "node",
+      "request": "launch",
+      "name": "Passwd server integration test",
+      "program": "${workspaceFolder}/node_modules/mocha/bin/_mocha",
+      "args": ["${workspaceFolder}/test/main/server.test.js"]
+    },
+    {
+      "type": "node",
+      "request": "launch",
+      "name": "Passwd http-helper.test",
+      "program": "${workspaceFolder}/node_modules/mocha/bin/_mocha",
+      "args": ["${workspaceFolder}/test/lib/server/http-helper.test.js"]
     }
   ]
 }
