--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "supertest": "^3.1.0"
   },
   "scripts": {
-    "test": "mocha",
+    "test": "mocha --recursive",
     "start": "node server.js"
   },
   "repository": {
